codebase/rdicidr-0.1.0/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactappdeplpyment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp1
  template:
    metadata:
      name: reactappPod
      labels:
        app: reactapp1
    spec:
      containers:
      - name: reactappcontainer
        image: reactimage:1
        ports:
        - containerPort: 3000
