codebase/rdicidr-0.1.0/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reactapp1
spec:
  selector:
    app: reactapp1
  ports:
  - port: 8080
    targetPort: 3000
  type: ClusterIP
